y.output
Terminals unused in grammar

   RESERVED


State 91 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionDefinition
    3                         | FunctionDeclaration
    4                         | Declaration
    5                         | FunctionsAndDeclarations FunctionDefinition
    6                         | FunctionsAndDeclarations FunctionDeclaration
    7                         | FunctionsAndDeclarations Declaration

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    9 FunctionBody: LBRACE RBRACE
   10             | LBRACE DeclarationsAndStatements RBRACE

   11 DeclarationsAndStatements: DeclarationsAndStatements Statement
   12                          | DeclarationsAndStatements Declaration
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: ID LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration
   18              | ParameterList COMMA ParameterDeclaration

   19 ParameterDeclaration: TypeSpec
   20                     | TypeSpec ID

   21 Declaration: TypeSpec DeclarationCD SEMI

   22 DeclarationCD: Declarator
   23              | DeclarationCD COMMA Declarator

   24 TypeSpec: CHAR
   25         | INT
   26         | VOID
   27         | SHORT
   28         | DOUBLE

   29 Declarator: ID
   30           | ID ASSIGN Expr

   31 Statement: Expr SEMI
   32          | SEMI
   33          | LBRACE Statementlbrace
   34          | IF LPAR Expr RPAR Statement
   35          | IF LPAR Expr RPAR Statement ELSE Statement
   36          | WHILE LPAR Expr RPAR Statement
   37          | RETURN StatementReturn

   38 Statementlbrace: Statement RBRACE
   39                | RBRACE

   40 StatementReturn: SEMI
   41                | Expr SEMI

   42 Expr: Expr ASSIGN Expr
   43     | Expr COMMA Expr
   44     | Expr PLUS Expr
   45     | Expr MINUS Expr
   46     | Expr MUL Expr
   47     | Expr DIV Expr
   48     | Expr MOD Expr
   49     | Expr OR Expr
   50     | Expr AND Expr
   51     | Expr BAND Expr
   52     | Expr BOR Expr
   53     | Expr BXOR Expr
   54     | Expr EQ Expr
   55     | Expr NE Expr
   56     | Expr LE Expr
   57     | Expr GE Expr
   58     | Expr LT Expr
   59     | Expr GT Expr
   60     | PLUS Expr
   61     | MINUS Expr
   62     | NOT Expr
   63     | ID LPAR RPAR
   64     | ID LPAR Expr ExprCE RPAR
   65     | ID
   66     | INTLIT
   67     | CHRLIT
   68     | REALLIT
   69     | LPAR Expr RPAR

   70 ExprCE: %empty
   71       | ExprCE COMMA Expr


Terminals, with rules where they appear

$end (0) 0
error (256)
CHRLIT (258) 67
ID (259) 16 20 29 30 63 64 65
REALLIT (260) 68
INTLIT (261) 66
CHAR (262) 24
ELSE (263) 35
WHILE (264) 36
IF (265) 34 35
INT (266) 25
SHORT (267) 27
DOUBLE (268) 28
RETURN (269) 37
VOID (270) 26
BAND (271) 51
BOR (272) 52
BXOR (273) 53
AND (274) 50
ASSIGN (275) 30 42
MUL (276) 46
COMMA (277) 18 23 43 71
DIV (278) 47
EQ (279) 54
GE (280) 57
GT (281) 59
LBRACE (282) 9 10 33
LE (283) 56
LPAR (284) 16 34 35 36 63 64 69
LT (285) 58
MINUS (286) 45 61
MOD (287) 48
NE (288) 55
NOT (289) 62
OR (290) 49
PLUS (291) 44 60
RBRACE (292) 9 10 38 39
RPAR (293) 16 34 35 36 63 64 69
SEMI (294) 15 21 31 32 40 41
RESERVED (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Programa (42)
    on left: 1, on right: 0
FunctionsAndDeclarations (43)
    on left: 2 3 4 5 6 7, on right: 1 5 6 7
FunctionDefinition (44)
    on left: 8, on right: 2 5
FunctionBody (45)
    on left: 9 10, on right: 8
DeclarationsAndStatements (46)
    on left: 11 12 13 14, on right: 10 11 12
FunctionDeclaration (47)
    on left: 15, on right: 3 6
FunctionDeclarator (48)
    on left: 16, on right: 8 15
ParameterList (49)
    on left: 17 18, on right: 16 18
ParameterDeclaration (50)
    on left: 19 20, on right: 17 18
Declaration (51)
    on left: 21, on right: 4 7 12 14
DeclarationCD (52)
    on left: 22 23, on right: 21 23
TypeSpec (53)
    on left: 24 25 26 27 28, on right: 8 15 19 20 21
Declarator (54)
    on left: 29 30, on right: 22 23
Statement (55)
    on left: 31 32 33 34 35 36 37, on right: 11 13 34 35 36 38
Statementlbrace (56)
    on left: 38 39, on right: 33
StatementReturn (57)
    on left: 40 41, on right: 37
Expr (58)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 66 67 68 69, on right: 30 31 34 35 36 41 42 43
    44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 64 69
    71
ExprCE (59)
    on left: 70 71, on right: 64 71


State 0

    0 $accept: . Programa $end

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    SHORT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    Programa                  go to state 6
    FunctionsAndDeclarations  go to state 7
    FunctionDefinition        go to state 8
    FunctionDeclaration       go to state 9
    Declaration               go to state 10
    TypeSpec                  go to state 11


State 1

   24 TypeSpec: CHAR .

    $default  reduce using rule 24 (TypeSpec)


State 2

   25 TypeSpec: INT .

    $default  reduce using rule 25 (TypeSpec)


State 3

   27 TypeSpec: SHORT .

    $default  reduce using rule 27 (TypeSpec)


State 4

   28 TypeSpec: DOUBLE .

    $default  reduce using rule 28 (TypeSpec)


State 5

   26 TypeSpec: VOID .

    $default  reduce using rule 26 (TypeSpec)


State 6

    0 $accept: Programa . $end

    $end  shift, and go to state 12


State 7

    1 Programa: FunctionsAndDeclarations .
    5 FunctionsAndDeclarations: FunctionsAndDeclarations . FunctionDefinition
    6                         | FunctionsAndDeclarations . FunctionDeclaration
    7                         | FunctionsAndDeclarations . Declaration

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    SHORT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    $default  reduce using rule 1 (Programa)

    FunctionDefinition   go to state 13
    FunctionDeclaration  go to state 14
    Declaration          go to state 15
    TypeSpec             go to state 11


State 8

    2 FunctionsAndDeclarations: FunctionDefinition .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 9

    3 FunctionsAndDeclarations: FunctionDeclaration .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 10

    4 FunctionsAndDeclarations: Declaration .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 11

    8 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   21 Declaration: TypeSpec . DeclarationCD SEMI

    ID  shift, and go to state 16

    FunctionDeclarator  go to state 17
    DeclarationCD       go to state 18
    Declarator          go to state 19


State 12

    0 $accept: Programa $end .

    $default  accept


State 13

    5 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition .

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 14

    6 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration .

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 15

    7 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration .

    $default  reduce using rule 7 (FunctionsAndDeclarations)


State 16

   16 FunctionDeclarator: ID . LPAR ParameterList RPAR
   29 Declarator: ID .
   30           | ID . ASSIGN Expr

    ASSIGN  shift, and go to state 20
    LPAR    shift, and go to state 21

    $default  reduce using rule 29 (Declarator)


State 17

    8 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   15 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 22
    SEMI    shift, and go to state 23

    FunctionBody  go to state 24


State 18

   21 Declaration: TypeSpec DeclarationCD . SEMI
   23 DeclarationCD: DeclarationCD . COMMA Declarator

    COMMA  shift, and go to state 25
    SEMI   shift, and go to state 26


State 19

   22 DeclarationCD: Declarator .

    $default  reduce using rule 22 (DeclarationCD)


State 20

   30 Declarator: ID ASSIGN . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 35


State 21

   16 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    SHORT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    ParameterList         go to state 36
    ParameterDeclaration  go to state 37
    TypeSpec              go to state 38


State 22

    9 FunctionBody: LBRACE . RBRACE
   10             | LBRACE . DeclarationsAndStatements RBRACE

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    CHAR     shift, and go to state 1
    WHILE    shift, and go to state 39
    IF       shift, and go to state 40
    INT      shift, and go to state 2
    SHORT    shift, and go to state 3
    DOUBLE   shift, and go to state 4
    RETURN   shift, and go to state 41
    VOID     shift, and go to state 5
    LBRACE   shift, and go to state 42
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    RBRACE   shift, and go to state 43
    SEMI     shift, and go to state 44

    DeclarationsAndStatements  go to state 45
    Declaration                go to state 46
    TypeSpec                   go to state 47
    Statement                  go to state 48
    Expr                       go to state 49


State 23

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 15 (FunctionDeclaration)


State 24

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 8 (FunctionDefinition)


State 25

   23 DeclarationCD: DeclarationCD COMMA . Declarator

    ID  shift, and go to state 50

    Declarator  go to state 51


State 26

   21 Declaration: TypeSpec DeclarationCD SEMI .

    $default  reduce using rule 21 (Declaration)


State 27

   67 Expr: CHRLIT .

    $default  reduce using rule 67 (Expr)


State 28

   63 Expr: ID . LPAR RPAR
   64     | ID . LPAR Expr ExprCE RPAR
   65     | ID .

    LPAR  shift, and go to state 52

    $default  reduce using rule 65 (Expr)


State 29

   68 Expr: REALLIT .

    $default  reduce using rule 68 (Expr)


State 30

   66 Expr: INTLIT .

    $default  reduce using rule 66 (Expr)


State 31

   69 Expr: LPAR . Expr RPAR

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 53


State 32

   61 Expr: MINUS . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 54


State 33

   62 Expr: NOT . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 55


State 34

   60 Expr: PLUS . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 56


State 35

   30 Declarator: ID ASSIGN Expr .
   42 Expr: Expr . ASSIGN Expr
   43     | Expr . COMMA Expr
   44     | Expr . PLUS Expr
   45     | Expr . MINUS Expr
   46     | Expr . MUL Expr
   47     | Expr . DIV Expr
   48     | Expr . MOD Expr
   49     | Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . BAND Expr
   52     | Expr . BOR Expr
   53     | Expr . BXOR Expr
   54     | Expr . EQ Expr
   55     | Expr . NE Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   58     | Expr . LT Expr
   59     | Expr . GT Expr

    BAND    shift, and go to state 57
    BOR     shift, and go to state 58
    BXOR    shift, and go to state 59
    AND     shift, and go to state 60
    ASSIGN  shift, and go to state 61
    MUL     shift, and go to state 62
    DIV     shift, and go to state 64
    EQ      shift, and go to state 65
    GE      shift, and go to state 66
    GT      shift, and go to state 67
    LE      shift, and go to state 68
    LT      shift, and go to state 69
    MINUS   shift, and go to state 70
    MOD     shift, and go to state 71
    NE      shift, and go to state 72
    OR      shift, and go to state 73
    PLUS    shift, and go to state 74

    $default  reduce using rule 30 (Declarator)


State 36

   16 FunctionDeclarator: ID LPAR ParameterList . RPAR
   18 ParameterList: ParameterList . COMMA ParameterDeclaration

    COMMA  shift, and go to state 75
    RPAR   shift, and go to state 76


State 37

   17 ParameterList: ParameterDeclaration .

    $default  reduce using rule 17 (ParameterList)


State 38

   19 ParameterDeclaration: TypeSpec .
   20                     | TypeSpec . ID

    ID  shift, and go to state 77

    $default  reduce using rule 19 (ParameterDeclaration)


State 39

   36 Statement: WHILE . LPAR Expr RPAR Statement

    LPAR  shift, and go to state 78


State 40

   34 Statement: IF . LPAR Expr RPAR Statement
   35          | IF . LPAR Expr RPAR Statement ELSE Statement

    LPAR  shift, and go to state 79


State 41

   37 Statement: RETURN . StatementReturn

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    SEMI     shift, and go to state 80

    StatementReturn  go to state 81
    Expr             go to state 82


State 42

   33 Statement: LBRACE . Statementlbrace

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    WHILE    shift, and go to state 39
    IF       shift, and go to state 40
    RETURN   shift, and go to state 41
    LBRACE   shift, and go to state 42
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    RBRACE   shift, and go to state 83
    SEMI     shift, and go to state 44

    Statement        go to state 84
    Statementlbrace  go to state 85
    Expr             go to state 49


State 43

    9 FunctionBody: LBRACE RBRACE .

    $default  reduce using rule 9 (FunctionBody)


State 44

   32 Statement: SEMI .

    $default  reduce using rule 32 (Statement)


State 45

   10 FunctionBody: LBRACE DeclarationsAndStatements . RBRACE
   11 DeclarationsAndStatements: DeclarationsAndStatements . Statement
   12                          | DeclarationsAndStatements . Declaration

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    CHAR     shift, and go to state 1
    WHILE    shift, and go to state 39
    IF       shift, and go to state 40
    INT      shift, and go to state 2
    SHORT    shift, and go to state 3
    DOUBLE   shift, and go to state 4
    RETURN   shift, and go to state 41
    VOID     shift, and go to state 5
    LBRACE   shift, and go to state 42
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    RBRACE   shift, and go to state 86
    SEMI     shift, and go to state 44

    Declaration  go to state 87
    TypeSpec     go to state 47
    Statement    go to state 88
    Expr         go to state 49


State 46

   14 DeclarationsAndStatements: Declaration .

    $default  reduce using rule 14 (DeclarationsAndStatements)


State 47

   21 Declaration: TypeSpec . DeclarationCD SEMI

    ID  shift, and go to state 50

    DeclarationCD  go to state 18
    Declarator     go to state 19


State 48

   13 DeclarationsAndStatements: Statement .

    $default  reduce using rule 13 (DeclarationsAndStatements)


State 49

   31 Statement: Expr . SEMI
   42 Expr: Expr . ASSIGN Expr
   43     | Expr . COMMA Expr
   44     | Expr . PLUS Expr
   45     | Expr . MINUS Expr
   46     | Expr . MUL Expr
   47     | Expr . DIV Expr
   48     | Expr . MOD Expr
   49     | Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . BAND Expr
   52     | Expr . BOR Expr
   53     | Expr . BXOR Expr
   54     | Expr . EQ Expr
   55     | Expr . NE Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   58     | Expr . LT Expr
   59     | Expr . GT Expr

    BAND    shift, and go to state 57
    BOR     shift, and go to state 58
    BXOR    shift, and go to state 59
    AND     shift, and go to state 60
    ASSIGN  shift, and go to state 61
    MUL     shift, and go to state 62
    COMMA   shift, and go to state 63
    DIV     shift, and go to state 64
    EQ      shift, and go to state 65
    GE      shift, and go to state 66
    GT      shift, and go to state 67
    LE      shift, and go to state 68
    LT      shift, and go to state 69
    MINUS   shift, and go to state 70
    MOD     shift, and go to state 71
    NE      shift, and go to state 72
    OR      shift, and go to state 73
    PLUS    shift, and go to state 74
    SEMI    shift, and go to state 89


State 50

   29 Declarator: ID .
   30           | ID . ASSIGN Expr

    ASSIGN  shift, and go to state 20

    $default  reduce using rule 29 (Declarator)


State 51

   23 DeclarationCD: DeclarationCD COMMA Declarator .

    $default  reduce using rule 23 (DeclarationCD)


State 52

   63 Expr: ID LPAR . RPAR
   64     | ID LPAR . Expr ExprCE RPAR

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    RPAR     shift, and go to state 90

    Expr  go to state 91


State 53

   42 Expr: Expr . ASSIGN Expr
   43     | Expr . COMMA Expr
   44     | Expr . PLUS Expr
   45     | Expr . MINUS Expr
   46     | Expr . MUL Expr
   47     | Expr . DIV Expr
   48     | Expr . MOD Expr
   49     | Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . BAND Expr
   52     | Expr . BOR Expr
   53     | Expr . BXOR Expr
   54     | Expr . EQ Expr
   55     | Expr . NE Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   58     | Expr . LT Expr
   59     | Expr . GT Expr
   69     | LPAR Expr . RPAR

    BAND    shift, and go to state 57
    BOR     shift, and go to state 58
    BXOR    shift, and go to state 59
    AND     shift, and go to state 60
    ASSIGN  shift, and go to state 61
    MUL     shift, and go to state 62
    COMMA   shift, and go to state 63
    DIV     shift, and go to state 64
    EQ      shift, and go to state 65
    GE      shift, and go to state 66
    GT      shift, and go to state 67
    LE      shift, and go to state 68
    LT      shift, and go to state 69
    MINUS   shift, and go to state 70
    MOD     shift, and go to state 71
    NE      shift, and go to state 72
    OR      shift, and go to state 73
    PLUS    shift, and go to state 74
    RPAR    shift, and go to state 92


State 54

   42 Expr: Expr . ASSIGN Expr
   43     | Expr . COMMA Expr
   44     | Expr . PLUS Expr
   45     | Expr . MINUS Expr
   46     | Expr . MUL Expr
   47     | Expr . DIV Expr
   48     | Expr . MOD Expr
   49     | Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . BAND Expr
   52     | Expr . BOR Expr
   53     | Expr . BXOR Expr
   54     | Expr . EQ Expr
   55     | Expr . NE Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   58     | Expr . LT Expr
   59     | Expr . GT Expr
   61     | MINUS Expr .

    MUL  shift, and go to state 62
    DIV  shift, and go to state 64
    MOD  shift, and go to state 71

    $default  reduce using rule 61 (Expr)


State 55

   42 Expr: Expr . ASSIGN Expr
   43     | Expr . COMMA Expr
   44     | Expr . PLUS Expr
   45     | Expr . MINUS Expr
   46     | Expr . MUL Expr
   47     | Expr . DIV Expr
   48     | Expr . MOD Expr
   49     | Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . BAND Expr
   52     | Expr . BOR Expr
   53     | Expr . BXOR Expr
   54     | Expr . EQ Expr
   55     | Expr . NE Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   58     | Expr . LT Expr
   59     | Expr . GT Expr
   62     | NOT Expr .

    $default  reduce using rule 62 (Expr)


State 56

   42 Expr: Expr . ASSIGN Expr
   43     | Expr . COMMA Expr
   44     | Expr . PLUS Expr
   45     | Expr . MINUS Expr
   46     | Expr . MUL Expr
   47     | Expr . DIV Expr
   48     | Expr . MOD Expr
   49     | Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . BAND Expr
   52     | Expr . BOR Expr
   53     | Expr . BXOR Expr
   54     | Expr . EQ Expr
   55     | Expr . NE Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   58     | Expr . LT Expr
   59     | Expr . GT Expr
   60     | PLUS Expr .

    MUL  shift, and go to state 62
    DIV  shift, and go to state 64
    MOD  shift, and go to state 71

    $default  reduce using rule 60 (Expr)


State 57

   51 Expr: Expr BAND . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 93


State 58

   52 Expr: Expr BOR . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 94


State 59

   53 Expr: Expr BXOR . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 95


State 60

   50 Expr: Expr AND . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 96


State 61

   42 Expr: Expr ASSIGN . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 97


State 62

   46 Expr: Expr MUL . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 98


State 63

   43 Expr: Expr COMMA . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 99


State 64

   47 Expr: Expr DIV . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 100


State 65

   54 Expr: Expr EQ . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 101


State 66

   57 Expr: Expr GE . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 102


State 67

   59 Expr: Expr GT . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 103


State 68

   56 Expr: Expr LE . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 104


State 69

   58 Expr: Expr LT . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 105


State 70

   45 Expr: Expr MINUS . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 106


State 71

   48 Expr: Expr MOD . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 107


State 72

   55 Expr: Expr NE . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 108


State 73

   49 Expr: Expr OR . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 109


State 74

   44 Expr: Expr PLUS . Expr

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 110


State 75

   18 ParameterList: ParameterList COMMA . ParameterDeclaration

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    SHORT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    ParameterDeclaration  go to state 111
    TypeSpec              go to state 38


State 76

   16 FunctionDeclarator: ID LPAR ParameterList RPAR .

    $default  reduce using rule 16 (FunctionDeclarator)


State 77

   20 ParameterDeclaration: TypeSpec ID .

    $default  reduce using rule 20 (ParameterDeclaration)


State 78

   36 Statement: WHILE LPAR . Expr RPAR Statement

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 112


State 79

   34 Statement: IF LPAR . Expr RPAR Statement
   35          | IF LPAR . Expr RPAR Statement ELSE Statement

    CHRLIT   shift, and go to state 27
    ID       shift, and go to state 28
    REALLIT  shift, and go to state 29
    INTLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34

    Expr  go to state 113


State 80

   40 StatementReturn: SEMI .

    $default  reduce using rule 40 (StatementReturn)


State 81

   37 Statement: RETURN StatementReturn .

    $default  reduce using rule 37 (Statement)


State 82

   41 StatementReturn: Expr . SEMI
   42 Expr: Expr . ASSIGN Expr
   43     | Expr . COMMA Expr
   44     | Expr . PLUS Expr
   45     | Expr . MINUS Expr
   46     | Expr . MUL Expr
   47     | Expr . DIV Expr
   48     | Expr . MOD Expr
   49     | Expr . OR Expr
   50     | Expr . AND Expr
   51     | Expr . BAND Expr
   52     | Expr . BOR Expr
   53     | Expr . BXOR Expr
   54     | Expr . EQ Expr
   55     | Expr . NE Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   58     | Expr . LT Expr
   59     | Expr . GT Expr
